[package]
name = "staart"
version = "0.1.7"
authors = ["Anthony Martinez <anthony@ajmartinez.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://git.staart.one/ajmartinez/staart"
repository = "https://git.staart.one/ajmartinez/staart.git"
description = "A Rust implementation of a tail-like library and binary crate"
keywords = ["tail"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
lto = true
panic = 'abort'

