[package]
name = "staart"
version = "0.4.0"
authors = ["Anthony Martinez <anthony@ajmartinez.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://git.staart.one/ajmartinez/staart"
repository = "https://git.staart.one/ajmartinez/staart.git"
description = "A Rust implementation of a tail-like library and binary crate"
keywords = ["tail"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
panic = 'abort'

