[package]
name = "staart"
version = "0.7.1"
authors = ["Anthony Martinez <anthony@ajmartinez.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/anthonyjmartinez/staart"
repository = "https://github.com/anthonyjmartinez/staart.git"
description = "A Rust implementation of a tail-like library and binary crate"
keywords = ["tail"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
panic = 'abort'

